modified three lines of CSS to fix a stubborn alignment issue caused by using text to fill the divs instead of images.  Also addded comments to he game board describing whence it came.

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,10 @@ header {
   font-size: 80px;
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
-  line-height: 100%;
+  line-height: 123px; /*edited this line after the course*/
+  /*  added the following two lines after the course*/
+  position: relative;
+  top: -18px;
 }
 
 footer {
